apps/media/bazarr/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bazarr-gateway
  namespace: media
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: bazarr.corruptmane.xyz
      tls:
        mode: Terminate
        certificateRefs:
          - name: bazarr-tls
