apps/media/bazarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: media
spec:
  parentRefs:
    - name: bazarr-gateway
  hostnames:
    - bazarr.corruptmane.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bazarr
          port: 6767
